# pp_start

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  logger.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  __main__.py  logging.py
app/bootstrap/: application.py  lifecycle.py
app/bot/util/: telegram_message.py
app/cache/: __init__.py  redis.py
app/config/: __init__.py  settings.py
app/core/: __init__.py  models.py  stopwords.py
app/core/data/: __init__.py
app/core/llm/: __init__.py  client.py  prompts.py
app/core/services/: __init__.py  moderation.py  spam_detector.py  verification.py
app/domain/: __init__.py  moderation.py
app/infrastructure/llm/: client.py  prompt.py
app/infrastructure/redis/: __init__.py  client.py
app/observability/: __init__.py  logging.py
app/tg_bot/: __init__.py
app/tg_bot/handlers/: __init__.py  admin.py  moderation.py  user.py  verification.py
app/usecase/: contract.py
filters/: stopwords.py
handlers/: verification.py
scripts/: make_help.py
tests/: test_admin_action_mode.py  test_auto_delete_messages.py  test_lifecycle.py  test_llm_client.py  test_moderation_actions.py  test_moderation_controller.py  test_moderation_duplicate_flood.py  test_moderation_stop_word_warning.py  test_project_architecture.py  test_redis_integration.py  test_redis_repositories.py  test_secret_hygiene.py  test_spam_detector.py  test_stopwords.py  test_verification_service.py
tests/support/: __init__.py  moderation.py
(+34 files in other folders)
